--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-list-endpoints": "^6.0.0",
     "express-list-routes": "^1.1.3",
     "express-session": "^1.17.2",
+    "fastify-secure-session": "^2.3.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
