--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.6",
     "express-list-endpoints": "^6.0.0",
     "express-list-routes": "^1.1.3",
