--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_USER=root
-DATABASE_PASSWORD=
-DATABASE_NAME=qldt
+DATABASE_PASSWORD=root
+DATABASE_NAME=qldtx
 DATABASE_PORT=3306
-DATABASE_HOST=localhost
+DATABASE_HOST=mysql
 SECRET_KEY=uukheckhec
