--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/typeorm": "^8.0.2",
     "bcrypt": "^5.0.1",
+    "cache-manager": "^3.4.4",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "connect-flash": "^0.1.1",
@@ -43,6 +45,7 @@
     "express-session": "^1.17.2",
     "fastify-secure-session": "^2.3.1",
     "mysql": "^2.18.1",
+    "nestjs-redis": "^1.3.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -57,6 +60,7 @@
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@types/cache-manager": "^3.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
     "@types/multer": "^1.4.7",
